[package]
name = "unproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-rustls = "0.23.4"
tokio = { version = "1", features = ["net"] }
webpki-roots = "0.22.4"
anyhow = "1"
url = "2.2.2"
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio"] }
