[package]
name = "unproxy-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Heyang Zhou <heyang.zhou@icloud.com>"]
description = "Map TCP services behind an HTTP(S) proxy to local ports."
repository = "https://github.com/losfair/unproxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
unproxy = "0.1.0"
structopt = "0.3.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["env-filter", "json", "std", "fmt"] }
